# microHAL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  UPDATE.md  annotated.html  arm-toolchain.cmake  classes.html  dir_08ab5d94d787b5443644dc1f87f07828.html  dir_3ca16765a2cfcdbcb3d94de13004a790.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7e72bc68965e89f2bfb1bf9e643bd664.html  dir_a475a3f6a6d14fbc51ff0211b0a28eb5.html  dir_c718a368270b13c54d94892d20736f45.html  dir_c9913bc8d79839cc8facb0cdebdaed9e.html  dir_cca2ba6cc60345ab42b239d70c289b2c.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_d.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_m.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_vars.html  index.html  (+3 more)
.github/workflows/: ci.yml
d0/d29/: main_8c.html
d0/d46/: structRCCPLLConfig.html
d0/de7/: structUSARTISR.html
d0/dea/: structRCC__TypeDef.html
d0/dfa/: structbxCANISR.html
d1/d84/: bxcan_8h.html  bxcan_8h_source.html
d1/da1/: structRCCRegs.html
d1/dc3/: structbxCANFilterConfig.html
d1/dfe/: structbxCANMailboxRegs.html
d2/d5a/: structADCRegs.html
d2/d83/: structPWR__TypeDef.html
d2/d89/: __init_8h.html  __init_8h_source.html
d2/dc6/: structDMAStreamISR.html
d2/df5/: mcu__init_8h.html  mcu__init_8h_source.html
d3/d33/: structbxCANFrame.html
d3/d55/: test__adc__driver_8c.html
d4/d04/: system__stm32f4xx_8c.html
d4/d3b/: test__gpio__driver_8c.html
d4/de8/: structDMAStreamConfig.html
d5/df2/: system__stm32f4xx_8h.html  system__stm32f4xx_8h_source.html
d6/d33/: structbxCANRegs.html
d6/d7c/: gpio_8h.html  gpio_8h_source.html
d6/ded/: interrupts_8h.html  interrupts_8h_source.html
d7/d19/: adc_8h.html  adc_8h_source.html
d7/d3f/: structUSARTRegs.html
d7/dfe/: rcc_8c.html
d8/d22/: interrupts_8c.html
d8/d4b/: structSPIRegs.html
d8/d51/: dma_8c.html
d8/d78/: isr_8c.html
d8/d7f/: structFLASH__TypeDef.html
d8/da0/: gpio_8c.html  structSCB__TypeDef.html
d8/da8/: isr_8h.html  isr_8h_source.html
d8/db0/: defines_8h.html  defines_8h_source.html
d8/dc6/: structbxCANAutomationConfig.html
d9/d01/: md_docs_2UPDATE.html
d9/d6b/: structbxCANBitrateConfig.html
d9/d95/: dma_8h.html  dma_8h_source.html
d9/dda/: structGPIORegs.html
da/d00/: spi_8c.html
da/d87/: spi_8h.html  spi_8h_source.html
da/da5/: structADCModes.html
da/dbb/: structDMAStreamRegs.html
da/dc1/: bxcan_8c.html
db/d65/: rcc_8h.html  rcc_8h_source.html
db/de4/: usart_8h.html  usart_8h_source.html
dc/d08/: usart_8c.html
dc/dfd/: stm32f4xx_8h.html  stm32f4xx_8h_source.html
dd/d07/: structSPIConfig.html
dd/dd0/: structDMARegs.html
de/d01/: adc_8c.html
de/d22/: mcu__init_8c.html
de/d25/: structSPIISR.html
de/da5/: bug.html
de/dd4/: structbxCANErrorInfo.html
df/d36/: structADCCommonRegs.html
df/dd5/: structbxCANFilterRegs.html
df/dd8/: md_UPDATE.html
df/deb/: __init_8c.html
docs/: README.md
docs/html/: adc_8c.html  adc_8h.html  adc_8h_source.html  annotated.html  bug.html  classes.html  defines_8h.html  defines_8h_source.html  dir_02ccabadecb7c9ed03787736536c43c6.html  dir_110ffb30fe9a9f3e55189c960615678e.html  dir_11438dfaef374996fbdac15175d35d6d.html  dir_1e3e107084b360b3799399136fcfc71b.html  dir_3d8c79f15410d3b1c580e3a96075ac17.html  dir_44370cf3325a484a82b5d21a3792b864.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5321f8dc9f8d3f56d4a8744ebd2d1580.html  dir_573ec88e47d7c4af33ce6fc1b7089af0.html  dir_583f755b9db442d997aac4655118349c.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5b32a475f5b480d5fc96c2503d0cf027.html  dir_635502c18f96d7e29c7088fdd20185d3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_755f38a81fde055d2cc92e45a28a5a74.html  dir_76ef701d8df40f09ebceefead2e73958.html  dir_7f812ebcc2b2cf2cd6de6da040565d4c.html  dir_8c116ca8b91d19ce704bfd5d79b2c123.html  dir_a07318cda34cc94016768e6cfde0188b.html  dir_a2cdbb71bd4af277c22d17e1ea1e3a2c.html  dir_a475a3f6a6d14fbc51ff0211b0a28eb5.html  dir_b536414c300926fff2970aae301f6675.html  dir_b88e5b0df276b032c5aa1186801110c5.html  dir_b9b34257acd60ca08b7bbd32bbec06c3.html  dir_be8e7cf07f991d980d082a216ea1b224.html  dir_bf226d9faff6e17257bea68673720b75.html  dir_c33c224b390b37af9dfd7503ead56a67.html  dir_c718a368270b13c54d94892d20736f45.html  dir_cca2ba6cc60345ab42b239d70c289b2c.html  dir_d7b55b011a95a0380fc400a50f760137.html  dir_e85c669d1b47f2564b3204c22a98f457.html  dir_edc6d99a7dd3e3ede0d4035d93e1262c.html  (+50 more)
docs/latex/: adc_8c.tex  adc_8h.tex  adc_8h_source.tex  annotated.tex  bug.tex  defines_8h.tex  defines_8h_source.tex  dma_8c.tex  dma_8h.tex  dma_8h_source.tex  files.tex  gpio_8c.tex  gpio_8h.tex  gpio_8h_source.tex  index.tex  interrupts_8c.tex  interrupts_8h.tex  interrupts_8h_source.tex  (+29 more)
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  (+29 more)
src/: CMakeLists.txt  main.c  startup_stm32f446xx.S
src/common/: defines.h
src/drivers/: CMakeLists.txt  _init.c  _init.h  adc.c  adc.h  dma.c  dma.h  gpio.c  gpio.h  interrupts.c  interrupts.h  mcu_init.c  mcu_init.h  rcc.c  rcc.h  usart.c  usart.h
src/drivers/core/: isr.c  isr.h  rcc.c  rcc.h
src/drivers/peripherals/: adc.c  gpio.h
src/drivers/peripherals/communication/: bxcan.c  bxcan.h  spi.c  spi.h  usart.h
tests/: CMakeLists.txt  test_adc_driver.c  test_gpio_driver.c
tests/stubs/CMSIS/: stm32f4xx.h  system_stm32f4xx.c  system_stm32f4xx.h
tools/: dockerfile
(+42 files in other folders)
